--- a/src/app/session/not-found/not-found.component.html
+++ b/src/app/session/not-found/not-found.component.html
@@ -1,28 +1,7 @@
-<div class="center">
-  <div class="card">
-    <h4 class="card-header">About</h4>
-    <div class="card-block">
-      <table>
-        <tr>
-          <td>
-            <div class="text-center span4"><img src="/assets/img/logo.png" height="300" width="300"></div>
-          </td>
-          <td class="info-panel">
-            <div class="appname">
-              Lory
-            </div>
-            <div>
-              <h4>V0.00.001</h4>
-            </div>
-            <div>
-              <h5>Advanced Data Center Manage Platform</h5>
-            </div>
-            <div class="bottom-align-text copyright">
-              Vertiv.com Ltd. Co CopyRight
-            </div>
-          </td>
-        </tr>
-      </table>
-    </div>
+<div class="row">
+  <div class="col-xlg-11 col-xl-11 col-lg-11 col-sm-11 col-11">
+    <ba-card class="col-xlg-10 col-xl-10 col-lg-10 col-sm-10 col-10" title="{{'general.common.notFound'}}" style="height:700px">
+      <h1>Page Not Found!</h1>
+    </ba-card>
   </div>
 </div>
