--- a/src/app/session/not-found/not-found.component.scss
+++ b/src/app/session/not-found/not-found.component.scss
@@ -1,19 +1,5 @@
+@import '../../layout/sass/conf/conf';
+
 :host /deep/ {
-  .center {
-    height: 80vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .info-panel {
-    margin-left: 40px;
-  }
-  .copyright {
-    margin-top: 50px;
-  }
-  .appname {
-    //margin-top: -30px;
-    font-size: 56px;
-    height: 70px;
-  }
+
 }
